2009-11-23  higepon  <higepon@users.sourceforge.jp>

	* VM.h (SAVE_REGISTERS): Fixed the bug Issue 112 pointed out by mrc.mgg.

	SAVE_REGISTERS used to save sp_ and fp_, but this will be broken when stack is expanded automatically.
	So we save the offset of them.

2009-11-17  higepon  <higepon@users.sourceforge.jp>

	* lib/srfi/%3a42/eager-comprehensions.sls (srfi): Added missing import.

	* tools/psyntax-r6rs/rev10_to_10/psyntax/main.ss: For thread safety, prefix-inc! is executed by only main-vm.

	* Added --verbose command line options, which shows library serialization messages.
	  This option is requested by mrc.mgg on Issue 114.

	* VMFactory.cpp (VMFactory::create): Fixed miss sharing transcoders between stdin/stdout.
	                                     Fixed issue 115  pointed out by tabe.fixedpoint.

2009-11-16  higepon  <higepon@users.sourceforge.jp>

	* ffi_stub_x86_64.S: Added.

2009-11-14  higepon  <higepon@users.sourceforge.jp>

	* Still failed some tests to be fixed.

	* lib/mosh/ffi.ss : c-function handles many argument types.

2009-11-13  higepon  <higepon@users.sourceforge.jp>

	* Symbol.cpp: intern becomes thread safe.

	* NumberScanner.h : NumberScanner becomes pure parser, which means thread safe.

	* Scanner.h : Scanner becomes pure parser, which means thread safe.

2009-11-12  higepon  <higepon@users.sourceforge.jp>

	* library.scm (make-enumeration): Added argument error check. Issue 113 pointed out by tabe.fixedpoint.

2009-11-02  higepon  <higepon@users.sourceforge.jp>

	* FFIProcedures.cpp (c_callback_double): Check return value satisfies isNumber().

	* lib/mosh/ffi.ss: Added lookup-shared-library and pointer->c-function, which is requested by mrc.mgg on Issue 110.

2009-11-01  higepon  <higepon@users.sourceforge.jp>

	* lib/mosh/ffi.ss : Added null-terminated-bytevector->string and null-terminated-utf8->string.

	* Fixed Issue 109: "utf8->string stops conversion at first null byte" pointed out by mrc.mgg.
